<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/form_background"
    android:elevation="4dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.user.LoginActivity">

    <TextView
        android:id="@+id/headline"
        style="@style/Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdit"
            style="@style/FieldEditText"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdit"
            style="@style/FieldEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/registerButton"
        style="@style/SecondCustomButton"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/registration" />

</LinearLayout>